updated options